Tue Jul 05 21:40:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/Mem_Map.cpp:
          Changed to consistently use ACE_OS::shm_open/ACE_OS::shm_unlink.

Tue Jul 05 21:15:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread{.h .inl .cpp}:
          Fixes for compile problems in MACOS_X_Panther build.

          Outlined ACE_OS::cond_init() to gain some footprint reduction.

Tue Jul  5 18:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_netdb.cpp (getmacaddress): Some layout fixes and
          also fixed a handle leak in the Sun part. Thanks to
          <likemartinma at 163 dot com> for reportint this. This fixes
          bugid 1875

Tue Jul  5 08:30:07 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/OS_NS_netdb.cpp (getmacaddress): Call close() to avoid
          a handle leak.  Thanks to W.M. van den Boogaard <wim dot vd dot
          boogaard at meco dot nl> for reporting this fix.  This fixes
          bugid 2182.

Mon Jul 04 21:08:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/INET_Addr.h:
        * ace/INET_Addr.cpp:
          Added support for specifying interface ids for IPv6 Link Local
          addresses either as part of the address (<ip>'%'<interface id>)
          separately through ACE_INET_Address::set_interface().
          Straightened out differences between Windows and Linux.
          ACE_INET_Address::get_host_addr() now returns <ip>'%'<interface
          id> formatted address when appropriate both on Windows
          (natively) and Linux (ACE).  Thanks to Srikanth Gopal
          <sriki_666@yahoo.com> for reporting this problem.

Mon Jul  4 04:21:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ace/Array_Map.h (ACE_Array_Map):

          Work around non-standard compliant Sun C++
          std::reverse_iterator<> template arguments.  Define a typedef
          specific to Sun C++ 5.5 or earlier.
