@@ -122,10 +122,13 @@ document</a>.</p><p>
   </tr>
   <tr>
     <th>Riverace</th>
-    <td>Offers ACE support and consulting services for many platforms
-        including AIX, HP-UX, Linux, Solaris, and Windows (including CE).
+    <td>Offers ACE
+        <a href="http://www.riverace.com/training.htm">training</a>,
+        <a href="http://www.riverace.com/support.htm">support</a> and
+        <a href="http://www.riverace.com/consult.htm">consulting services</a>
+        for many platforms including AIX, HP-UX, Linux, Solaris, and Windows.
     </td>
-    <td>Riverace's <a href="http://www.riverace.com/">web site</a></td>
+    <td>Riverace's <a href="http://www.riverace.com/">web site</a>.</td>
   </tr>
   <tr>
     <th>OCI</th>
